# Django_async

./: Dockerfile  README.md  heroku.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: workflow-pr.yml
bookstore/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
bookstore/bookstore/: settings.py  urls.py
bookstore/order/: factories.py  urls.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/: factories.py
bookstore/order/tests/test_viewsets/: test_order_viewset.py
bookstore/order/viewsets/: order_viewset.py  urls.py
bookstore/product/: factories.py  urls.py
bookstore/product/migrations/: 0001_initial.py  0002_category_description_category_slug_category_title_and_more.py  0003_rename_discriptions_product_descriptions.py  0004_alter_category_description_alter_category_title_and_more.py
bookstore/product/models/: category.py  product.py
bookstore/product/serializers/: category_serializer.py  product_serializer.py
bookstore/product/tests/: apps.py
bookstore/product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
bookstore/product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
bookstore/tests/: factories.py
