[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["lmescoito <lmescoito@hotmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
factory-boy = "^3.3.0"
django = "^5.0.6"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.2"
psycopg = "^3.2.1"
flake8 = "^7.1.0"
whitenoise = "^6.7.0"
gunicorn = "^22.0.0"
gitpython = "^3.1.43"
poetry = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
